added classes for margin

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="row purple-bar">
       <div class="column-full container">
-        <h2>Code Journal</h2>
+        <h2 class="fw-400 f-white">Code Journal</h2>
       </div>
     </div>
   </header>
@@ -42,7 +42,7 @@
               <label for="title">
                 <h4>Title</h4>
               </label>
-              <input required name="title" id="title" type="text">
+              <input required name="title" id="title" type="text" class="mb">
               <label for="photo-url">
                 <h4>Photo URL</h4>
               </label>
