--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
   <header>
     <div class="row purple-bar">
       <div class="column-full container">
-        <h2 class="fw-400 f-white">Code Journal</h2>
+        <h2 class="fw-400 f-white block">Code Journal</h2>
+        <h3 class="fw-400 f-white block ml">Entries</h3>
       </div>
     </div>
   </header>
   <main>
     <div class="container">
-      <div class="row">
-        <div class="column-full">
-          <h1>New Entry</h1>
+
+      <div data-view="entry-form" class="hidden">
+
+        <div class="row">
+          <div class="column-full">
+            <h1>New Entry</h1>
+          </div>
         </div>
-      </div>
-      <div data-view="entry-form">
+
         <form id="input-form">
         <div class="row">
           <div class="column-half">
@@ -42,7 +46,7 @@
               <label for="title">
                 <h4>Title</h4>
               </label>
-              <input required name="title" id="title" type="text" class="mb">
+              <input required name="title" id="title" type="text" class="mb-1.8">
               <label for="photo-url">
                 <h4>Photo URL</h4>
               </label>
@@ -58,6 +62,45 @@
           <button id="submit-btn" type="submit">SAVE</button>
         </form>
       </div>
+
+      <div data-view="entries">
+
+        <div class="row">
+
+          <div class="column-full">
+            <h1 class="block">Entries</h1>
+            <button class="block" id="new-btn">NEW</button>
+          </div>
+
+          <div class="column-full hidden flex jc-center">
+            No entries have been recorded.
+          </div>
+
+          <ul>
+
+          </ul>
+<!--
+          <div class="column-full column-half">
+            <img src="images/placeholder-image-square.jpg">
+          </div>
+
+          <div class="column-full column-half">
+            <div class="row">
+              <h2 class="mb-0">Title</h2>
+            </div>
+
+            <div class="row">
+              <p>Notes Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, ea officia saepe necessitatibus possimus nulla iusto sunt perspiciatis, distinctio sint tenetur qui excepturi! Fugiat, illum ratione! Necessitatibus, nihil. Error, aliquid. Temporibus in placeat obcaecati dolor quo quibusdam reprehenderit sequi dolorum! A quae laudantium, fugiat consectetur cupiditate eos unde doloremque cum ratione at?</p>
+            </div> -->
+
+
+
+        </div>
+
+
+      </div>
+
+
     </div>
    </main>
   <script src="js/data.js"></script>
