--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   <main>
     <div class="container">
-      <div data-view="entry-form" id="entry-form" class="hidden page">
+      <div data-view="entry-form" id="entry-form" class="hidden view">
         <div class="row">
           <div class="column-full">
             <h1>New Entry</h1>
@@ -58,16 +58,16 @@
             </label>
             <textarea required rows="6" name="notes" id="notes"></textarea>
           </div>
-          <button id="submit-btn" data-view="entry-form" type="submit">SAVE</button>
+          <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
         </form>
       </div>
-      <div data-view="entries" id="entries-page" class="page">
+      <div data-view="entries" id="entries-page" class="view">
         <div class="row">
           <div class="column-full">
             <h1 class="block">Entries</h1>
-            <button data-view="entry-form" class="block" id="new-btn">NEW</button>
+            <button data-view="entry-form" class="block view" id="new-btn">NEW</button>
           </div>
-          <div id="no-entries-text" class="hidden page column-full flex jc-center">
+          <div id="no-entries-text" class="hidden column-full flex jc-center">
             No entries have been recorded.
           </div>
           <ul></ul>
