--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="column-full container">
         <h2 class="fw-400 f-white block">Code Journal</h2>
         <a href="" data-view="entries">
-          <h3 class="fw-400 f-white block ml">Entries</h3>
+          <h3 class="fw-400 f-white block ml" id="navEntries">Entries</h3>
         </a>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="column-full">
             <h1 class="block">Entries</h1>
-            <button data-view="entry-form" class="block view" id="new-btn">NEW</button>
+            <button data-view="entries" class="view" id="new-btn">NEW</button>
           </div>
           <div id="no-entries-text" class="hidden column-full flex jc-center">
             No entries have been recorded.
