added edit icon, opens pre-populated entry form when edit icon is clicked

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="row purple-bar">
       <div class="column-full container">
         <h2 class="fw-400 f-white block">Code Journal</h2>
-        <a href="" data-view="entries">
+        <a href="" data-view="entry-form">
           <h3 class="fw-400 f-white block ml" id="navEntries">Entries</h3>
         </a>
       </div>
@@ -67,7 +67,7 @@
             <h1 class="block">Entries</h1>
             <button data-view="entries" class="view" id="new-btn">NEW</button>
           </div>
-          <div id="no-entries-text" class="hidden column-full flex jc-center">
+          <div id="no-entries-text" class="column-full flex jc-center">
             No entries have been recorded.
           </div>
           <ul></ul>
