--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
   <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
+  <div class="overlay hidden">
+    <div class="modal">
+      <h4>Are you sure you want to delete this entry?</h4>
+      <div class="row jc-between padding-lr">
+        <button class="cancel-btn">CANCEL</button>
+        <button class="confirm-btn">CONFIRM</button>
+      </div>
+    </div>
+  </div>
   <header>
     <div class="row purple-bar">
       <div class="column-full container">
@@ -37,11 +46,11 @@
           </div>
         </div>
         <form id="input-form">
-        <div class="row">
-          <div class="column-half">
-            <img id="entry-img" src="images/placeholder-image-square.jpg">
-          </div>
-          <div class="column-half">
+          <div class="row">
+            <div class="column-half">
+              <img id="entry-img" src="images/placeholder-image-square.jpg">
+            </div>
+            <div class="column-half">
               <label for="title">
                 <h4>Title</h4>
               </label>
@@ -50,15 +59,28 @@
                 <h4>Photo URL</h4>
               </label>
               <input required name="photo" id="photo" type="text">
+            </div>
           </div>
-        </div>
-          <div class="column-full">
-            <label for="notes">
-              <h4 class="margin-0">Notes</h4>
-            </label>
-            <textarea required rows="6" name="notes" id="notes"></textarea>
+          <div class="row">
+            <div class="column-full">
+              <label for="notes">
+                <h4 class="margin-0">Notes</h4>
+              </label>
+              <textarea required rows="6" name="notes" id="notes"></textarea>
+            </div>
           </div>
-          <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
+          <div class="row">
+            <div class="column-full align-center jc-between flex">
+              <a href="#" class="mt-1.5 flex delete">Delete Entry</a>
+              <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
+            </div>
+            <!-- <div class="column-half">
+              <a href="#" class="mt-1.5 flex delete">Delete Entry</a>
+            </div>
+            <div class="column-half">
+              <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
+            </div> -->
+          </div>
         </form>
       </div>
       <div data-view="entries" id="entries-page" class="view">
