add functionality to Confirm/Cancel buttons on modal

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="row">
             <div class="column-full align-center jc-between flex">
-              <a href="#" class="mt-1.5 flex delete">Delete Entry</a>
+              <a href="#" class="hidden mt-1.5 flex delete">Delete Entry</a>
               <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
             </div>
             <!-- <div class="column-half">
