adjust css layout

--- a/index.html
+++ b/index.html
@@ -70,16 +70,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="column-full align-center jc-between flex">
+            <div id="align-div" class="column-full align-center jc-right flex">
               <a href="#" class="hidden mt-1.5 flex delete">Delete Entry</a>
               <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
             </div>
-            <!-- <div class="column-half">
-              <a href="#" class="mt-1.5 flex delete">Delete Entry</a>
-            </div>
-            <div class="column-half">
-              <button id="submit-btn" data-view="entry-form" class="view" type="submit">SAVE</button>
-            </div> -->
           </div>
         </form>
       </div>
